--- a/style.css
+++ b/style.css
@@ -347,3 +347,13 @@ transition: background-color 0.3s ease;
         transform: rotate(360deg);
     }
 }
+.footer {
+    background-color: #888;
+    color: #fff; 
+    text-align: center;
+    padding: 10px 0;
+
+
+.footer p {
+    margin: 0;
+}
